GH-3088: Add Jackson 3 support; deprecate Jackson 2
Fixes: https://github.com/spring-projects/spring-amqp/issues/3088

* Manage `tools.jackson` dependencies, similar way we do for Jackson 2
* Add Jackson 3 counterparts for existing Jackson 2 based classes.
Technically, that is mostly just a copy/paste of existing classes, but with `tools.jackson` API adjustments
* Fix `AbstractJacksonMessageConverter` to catch not only `IOException`, but also `JacksonException`
* Migrate tests and docs to use new classes
* Deprecate Jackson 2 based classes